Add Python FastAPI project with CI and Docker support
Introduces a new 'python-project' directory containing a FastAPI app with a health check endpoint, SQLAlchemy models, Alembic migrations, and test coverage. Adds Dockerfiles for production and test environments, a Docker Compose file for integration testing, and updates the Jenkinsfile to build and test the Python project alongside existing applications. Updates .gitignore for Python artifacts.

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,35 @@ dist-ssr
 # Dependencies
 node_modules
 
+# Python
+__pycache__/
+*.py[cod]
+*.pyd
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+.venv/
+venv/
+ENV/
+env/
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+.coverage
+coverage.xml
+*.db
+
 # Docker
 docker-compose.override.yml
-
