Configure setuptools package discovery
Added [tool.setuptools.packages.find] section to pyproject.toml to specify package discovery settings, including where to search and which packages to include or exclude.

--- a/python-project/pyproject.toml
+++ b/python-project/pyproject.toml
@@ -19,3 +19,8 @@ serve = "python_project.main:run"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["python_project"]
+exclude = ["alembic", "tests"]
