Update test service command in docker-compose.test.yml
Changed the test service to use absolute paths for alembic and pytest within the virtual environment, and switched the shell to /bin/sh for command execution.

--- a/python-project/docker-compose.test.yml
+++ b/python-project/docker-compose.test.yml
@@ -22,4 +22,9 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-    command: ["bash", "-lc", "alembic upgrade head && pytest -q"]
+    command:
+      [
+        "/bin/sh",
+        "-c",
+        "/app/.venv/bin/alembic upgrade head && /app/.venv/bin/pytest -q",
+      ]
